updated slideshow, corrected errors

--- a/Index.html
+++ b/Index.html
@@ -78,16 +78,16 @@
   <!-- SLIDESHOW -->
   <div class="slideshow-container">
   <div class="mySlides fade">
-    <img src="Gallery5.jpg" style="width:100%;height:50%;">
+    <img src="Gallery5.jpg" alt="ocean" style="width:100%;height:50%;">
   </div>
   <div class="mySlides fade">
-    <img src="Gallery2.jpg" style="width:100%;height:50%;">
+    <img src="Gallery2.jpg" alt="ocean" style="width:100%;height:50%;">
   </div>
   <div class="mySlides fade">
-    <img src="Gallery3.jpg" style="width:100%;height:50%;">
+    <img src="Gallery3.jpg"  alt="ocean" style="width:100%;height:50%;">
   </div>
   <div class="mySlides fade">
-    <img src="img1.jpg" style="width:100%;height:50%;">
+    <img src="img1.jpg"  alt="ocean" style="width:100%;height:50%;">
   </div>
   <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
   <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -111,7 +111,7 @@
     <div id="map"></div> 
   <p> 
   <script src="javascript/main.js"></script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAwyLu7hawS9d9qvsyoSgQMRL0bxOnmLEA&callback=initMap" type="text/javascript"></script> 
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAwyLu7hawS9d9qvsyoSgQMRL0bxOnmLEA&callback=initMap"></script> 
 </section>
   <!-- Image with text-->
   <div class="img-bg3">
@@ -119,7 +119,7 @@
   </div>
   <section id="last-section">
     <!-- Section Title -->
-    <h1 class="sr6">Contact us</h1>
+    <h1 class="sr6"> Contact us </h1>
 	<!-- COntact form -->
     <form class="Contact-Form sr7">
       <label for="contact-form-name">Name:</label>
@@ -128,7 +128,7 @@
       <br> <br>
       <label for="contact-form-message">Message:</label>
       <br> <br>
-      <textarea  id="contact-form-message" width="500" class="contact-form-textarea" placeholder="Enter Message..."></textarea>
+      <textarea id="contact-form-message" class="contact-form-textarea" placeholder="Enter Message..."></textarea>
       <br> <br>
       <input type="submit" class="btn" value="Send">
     </form>
