fixed errors on gallery, made changes to css file. Fixed errors on tours.html

--- a/gallery.html
+++ b/gallery.html
@@ -25,38 +25,34 @@
          <li class="nav-item hidden menu-icon"><a href="#" class="nav-link"><i class="fa fa-bars"></i></a></li>
       </ul>
 
-         <div class="nav-content">
+         <ul class="nav-content">
             <li class="nav-item2"><a href="index.html" class="nav-link2">Home</a></li>
             <li class="nav-item2"><a href="tour.html" class="nav-link2">Tours</a></li>
             <li class="nav-item2"><a href="gallery.html" class="nav-link2">Gallery</a></li>
             <li class="nav-item2"><a class="nav-link2 close-nav">&times;</a></li>
-         </div>
+         </ul>
    	</nav>
 
       <!-- end of navigation bar -->
 
       <!-- Line of Text on top of image -->
 
-   	<h1 class="header-text"> Here is <br> a gallery <br> of sceneric pictures</h1>
+   	<h1 class="header-text"> Here is <br/> a gallery <br/> of sceneric pictures</h1>
 
 
-   	<br><br><br>
+   	<br/><br/><br/>
 
    </header>
 
-   <br><br>
+   <br/><br/>
 
    <div class="gallery-1">
-
-      <h1>Gallery<h1>
-
-        <img src="Gallery8.jpg" onmouseover="this.src='Gallery8.jpg'" onmouseout="this.src='Gallery9.jpg'" />
-		<img src="Gallery11.jpg" onmouseover="this.src='Gallery11.jpg'" onmouseout="this.src='Gallery7.jpg'" />
-		
+	<img src="Gallery8.jpg" alt="Road" onmouseover="this.src='Gallery8.jpg'" onmouseout="this.src='Gallery9.jpg'"/>
+	<img src="Gallery11.jpg" alt="Mountains" onmouseover="this.src='Gallery11.jpg'" onmouseout="this.src='Gallery7.jpg'"/>
    </div>
-</div>
 
-   <br>
+
+   <br/>
 
    <div class="gallery-2" style="height:750px;">
 
@@ -68,25 +64,25 @@
 
         <div class="mySlides fade">
 
-          <img src="img1.jpg" style="width:100%;height:50%;">
+          <img src="img1.jpg" alt="Beach" style="width:100%;height:50%;">
 
         </div>
 
         <div class="mySlides fade">
 
-          <img src="img2.png" style="width:100%;height:50%;">
+          <img src="img2.png" alt="WaterSports" style="width:100%;height:50%;">
 
         </div>
 
         <div class="mySlides fade">
 
-          <img src="img3.jpg" style="width:100%;height:50%;">
+          <img src="img3.jpg" alt="Mountains" style="width:100%;height:50%;">
 
         </div>
 
         <div class="mySlides fade">
 
-          <img src="img4.jpg" style="width:100%;height:50%;">
+          <img src="img4.jpg" alt="MountainView" style="width:100%;height:50%;">
 
         </div>
 
