--- a/tour.html
+++ b/tour.html
@@ -21,12 +21,12 @@
     <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
     <li class="nav-item hidden menu-icon"><a href="#" class="nav-link"><i class="fa fa-bars"></i></a></li>
   </ul>
-  <div class="nav-content">
+  <ul class="nav-content">
     <li class="nav-item2"><a href="index.html" class="nav-link2">Home</a></li>
     <li class="nav-item2"><a href="tour.html" class="nav-link2">Tours</a></li>
     <li class="nav-item2"><a href="gallery.html" class="nav-link2">Gallery</a></li>
     <li class="nav-item2"><a class="nav-link2 close-nav">&times;</a></li>
-  </div>
+  </ul>
   </nav>
   <!-- end of navigation bar -->
   <!-- Line of Text on top of image -->
