organisation of files and put images and javascript in folders

--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><!-- Link to font awesome for icons -->
 
 </head>
+</head>
 <body>
 <header>
   <!-- Navigation bar -->
@@ -16,7 +17,7 @@
     <a href="index.html" class="nav-brand"><span>Malawi Tours</span></a>
     <ul class="nav-list">
       <!-- Nav items here -->
-      <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
+      <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
       <li class="nav-item"><a href="tour.html" class="nav-link">Tours</a></li>
       <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
       <li class="nav-item hidden menu-icon"><a href="#" class="nav-link"><i class="fa fa-bars"></i></a></li>
@@ -41,28 +42,28 @@
     <!-- 1st destination-->
     <div class="icon">
     <!-- Image of desination -->
-    <img src="LakeMalawi.jpg" alt="">
+    <img src="images/LakeMalawi.jpg" alt="">
     <!-- Title of destination -->
     <h2> Lake Malawi </h2>
     </div>
     <!-- 2nd destination-->
   <div class="icon">
     <!-- Image of desination -->
-    <img src="Img3.jpg" alt="">
+    <img src="images/Img3.jpg" alt="">
     <!-- Title of destination -->
     <h2> Mount Mulanji </h2>
   </div>
     <!-- 3rd destination-->
   <div class="icon">
     <!-- Image of desination -->
-    <img src="Img6.jpg" alt="">
+    <img src="images/Img6.jpg" alt="">
     <!-- Title of destination -->
     <h2> Game Reserve </h2>
   </div>
   <!-- 4th destination-->
   <div class="icon">
     <!-- Image of desination -->
-    <img src="Img9.jpg" alt="">
+    <img src="images/Img9.jpg" alt="">
     <!-- Title of destination -->
     <h2> Holiday Resorts </h2>
   </div>
@@ -78,16 +79,16 @@
   <!-- SLIDESHOW -->
   <div class="slideshow-container">
   <div class="mySlides fade">
-    <img src="Gallery5.jpg" alt="ocean" style="width:100%;height:50%;">
+    <img src="images/Gallery5.jpg" alt="ocean" style="width:100%;height:50%;">
   </div>
   <div class="mySlides fade">
-    <img src="Gallery2.jpg" alt="ocean" style="width:100%;height:50%;">
+    <img src="images/Gallery2.jpg" alt="ocean" style="width:100%;height:50%;">
   </div>
   <div class="mySlides fade">
-    <img src="Gallery3.jpg"  alt="ocean" style="width:100%;height:50%;">
+    <img src="images/Gallery3.jpg"  alt="ocean" style="width:100%;height:50%;">
   </div>
   <div class="mySlides fade">
-    <img src="img1.jpg"  alt="ocean" style="width:100%;height:50%;">
+    <img src="images/img1.jpg"  alt="ocean" style="width:100%;height:50%;">
   </div>
   <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
   <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -145,6 +146,6 @@
   <!-- Scroll Reveal -->
   <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
   <!-- Javascript file-->
-  <script src="main.js"></script>
+  <script src="javascript/main.js"></script>
 </body>
 </html>
