--- a/tour.html
+++ b/tour.html
@@ -41,7 +41,7 @@
         <div class="column">
           <div class="content">
             <!-- 1st tour image -->
-            <img src="Img3.jpg" alt="Mountains" style="width:100%">
+            <img src="images/Img3.jpg" alt="Mountains" style="width:100%">
             <!-- name of tour -->
             <button class="myBtn modal-btn">Tour 1</button>
           </div>
@@ -59,7 +59,7 @@
   <div class="column">
   <div class="content">
   <!-- -2nd tour image -->
-  <img src="Img2.png" alt="Lights" style="width:100%">
+  <img src="images/Img2.jpg" alt="Lights" style="width:100%">
   <!-- name of tour -->
   <button class="myBtn modal-btn">Tour 2</button>
   </div>
@@ -67,7 +67,7 @@
   <div class="column">
   <div class="content">
   <!-- 3rd tour image-->
-  <img src="Img4.jpg" alt="Nature" style="width:100%">
+  <img src="images/Img4.jpg" alt="Nature" style="width:100%">
   <!-- name of tour -->
   <button class="myBtn modal-btn">Tour 3</button>
   </div>
@@ -75,7 +75,7 @@
   <div class="column">
     <div class="content">
   <!-- 4th tour image-->
-  <img src="Img5.jpg" alt="Mountains" style="width:100%">
+  <img src="images/Img5.jpg" alt="Mountains" style="width:100%">
   <!-- name of tour -->
     <button class="myBtn modal-btn">Tour 4</button>
       </div>
@@ -142,7 +142,7 @@
       </script>
 
       <!-- Javascript file-->
-      <script src="main.js"></script>
+      <script src="javascript/main.js"></script>
 
 </body>
 </html>
