--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"><!-- For responsive design -->
   <meta http-equiv="X-UA-Compatible" content="ie=edge"><!-- for internet explorer compatibility -->
   <title>Malawi Tours</title>
-  <link rel="stylesheet" href="design.css"><!-- Link to css file -->
+  <link rel="stylesheet" href=design.css"><!-- Link to css file -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><!-- Link to font awesome for icons -->
 </head>
 <body>
@@ -47,8 +47,8 @@
    <br/><br/>
 
    <div class="gallery-1">
-	<img src="Gallery8.jpg" alt="Road" onmouseover="this.src='Gallery8.jpg'" onmouseout="this.src='Gallery9.jpg'"/>
-	<img src="Gallery11.jpg" alt="Mountains" onmouseover="this.src='Gallery11.jpg'" onmouseout="this.src='Gallery7.jpg'"/>
+	<img src="images/Gallery8.jpg" alt="Road" onmouseover="this.src='images/Gallery8.jpg'" onmouseout="this.src='images/Gallery9.jpg'"/>
+	<img src="images/Gallery11.jpg" alt="Mountains" onmouseover="this.src='images/Gallery11.jpg'" onmouseout="this.src='images/Gallery7.jpg'"/>
    </div>
 
 
@@ -64,25 +64,25 @@
 
         <div class="mySlides fade">
 
-          <img src="img1.jpg" alt="Beach" style="width:100%;height:50%;">
+          <img src="images/img1.jpg" alt="Beach" style="width:100%;height:50%;">
 
         </div>
 
         <div class="mySlides fade">
 
-          <img src="img2.png" alt="WaterSports" style="width:100%;height:50%;">
+          <img src="images/img2.jpg" alt="WaterSports" style="width:100%;height:50%;">
 
         </div>
 
         <div class="mySlides fade">
 
-          <img src="img3.jpg" alt="Mountains" style="width:100%;height:50%;">
+          <img src="images/img3.jpg" alt="Mountains" style="width:100%;height:50%;">
 
         </div>
 
         <div class="mySlides fade">
 
-          <img src="img4.jpg" alt="MountainView" style="width:100%;height:50%;">
+          <img src="images/img4.jpg" alt="MountainView" style="width:100%;height:50%;">
 
         </div>
 
@@ -114,7 +114,7 @@
   <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
 
    <!-- Javascript file-->
-   <script src="main.js"></script>
+   <script src="javascript/main.js"></script>
 
 </body>
 </html>
