gallery css updated

--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"><!-- For responsive design -->
   <meta http-equiv="X-UA-Compatible" content="ie=edge"><!-- for internet explorer compatibility -->
   <title>Malawi Tours</title>
-  <link rel="stylesheet" href=design.css"><!-- Link to css file -->
+  <link rel="stylesheet" href="design.css"><!-- Link to css file -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><!-- Link to font awesome for icons -->
 </head>
 <body>
