--- a/Index.html
+++ b/Index.html
@@ -56,14 +56,14 @@
     <!-- 3rd destination-->
   <div class="icon">
     <!-- Image of desination -->
-    <img src="images/Img6.jpg" alt="">
+    <img src="images/Img6.JPG" alt="">
     <!-- Title of destination -->
     <h2> Game Reserve </h2>
   </div>
   <!-- 4th destination-->
   <div class="icon">
     <!-- Image of desination -->
-    <img src="images/Img9.jpg" alt="">
+    <img src="images/img9.jpg" alt="">
     <!-- Title of destination -->
     <h2> Holiday Resorts </h2>
   </div>
