--- a/tour.html
+++ b/tour.html
@@ -16,7 +16,7 @@
   <a href="index.html" class="nav-brand"><span>Malawi Tours</span></a>
   <ul class="nav-list">
     <!-- Nav items here -->
-    <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+    <li class="nav-item"><a href="Index.html" class="nav-link">Home</a></li>
     <li class="nav-item"><a href="tour.html" class="nav-link">Tours</a></li>
     <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
     <li class="nav-item hidden menu-icon"><a href="#" class="nav-link"><i class="fa fa-bars"></i></a></li>
