--- a/gallery.html
+++ b/gallery.html
@@ -19,14 +19,14 @@
 
       <ul class="nav-list">
          <!-- Nav items here -->
-         <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
+         <li class="nav-item"><a href="Index.html" class="nav-link">Home</a></li>
          <li class="nav-item"><a href="tour.html" class="nav-link">Tours</a></li>
          <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
          <li class="nav-item hidden menu-icon"><a href="#" class="nav-link"><i class="fa fa-bars"></i></a></li>
       </ul>
 
          <ul class="nav-content">
-            <li class="nav-item2"><a href="index.html" class="nav-link2">Home</a></li>
+            <li class="nav-item2"><a href="Index.html" class="nav-link2">Home</a></li>
             <li class="nav-item2"><a href="tour.html" class="nav-link2">Tours</a></li>
             <li class="nav-item2"><a href="gallery.html" class="nav-link2">Gallery</a></li>
             <li class="nav-item2"><a class="nav-link2 close-nav">&times;</a></li>
