--- a/gallery.html
+++ b/gallery.html
@@ -15,7 +15,7 @@
 
    	<nav class="nav">
 
-      <a href="index.html" class="nav-brand"><span>Malawi Tours</span></a>
+      <a href="Index.html" class="nav-brand"><span>Malawi Tours</span></a>
 
       <ul class="nav-list">
          <!-- Nav items here -->
