--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
 <header>
   <!-- Navigation bar -->
   <nav class="nav">
-    <a href="index.html" class="nav-brand"><span>Malawi Tours</span></a>
+    <a href="Index.html" class="nav-brand"><span>Malawi Tours</span></a>
     <ul class="nav-list">
       <!-- Nav items here -->
       <li class="nav-item"><a href="Index.html" class="nav-link">Home</a></li>
