--- a/gallery.html
+++ b/gallery.html
@@ -82,7 +82,7 @@
 
         <div class="mySlides fade">
 
-          <img src="images/img4.jpg" alt="MountainView" style="width:100%;height:50%;">
+          <img src="images/Img4.jpg" alt="MountainView" style="width:100%;height:50%;">
 
         </div>
 
