--- a/gallery.html
+++ b/gallery.html
@@ -64,19 +64,19 @@
 
         <div class="mySlides fade">
 
-          <img src="images/img1.jpg" alt="Beach" style="width:100%;height:50%;">
+          <img src="images/Img1.jpg" alt="Beach" style="width:100%;height:50%;">
 
         </div>
 
         <div class="mySlides fade">
 
-          <img src="images/img2.jpg" alt="WaterSports" style="width:100%;height:50%;">
+          <img src="images/Img2.jpg" alt="WaterSports" style="width:100%;height:50%;">
 
         </div>
 
         <div class="mySlides fade">
 
-          <img src="images/img3.jpg" alt="Mountains" style="width:100%;height:50%;">
+          <img src="images/Img3.jpg" alt="Mountains" style="width:100%;height:50%;">
 
         </div>
 
